# syn-grammar

./: .aider.conf.yml  CHANGELOG.md  Cargo.toml  EXTENDING.md  README.md  features-missing.md  syn = { version = "2.0", features = ["full", "extra-traits"] }  }
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
.idx/: dev.nix
docs/adr/: adr-list.md  adr04-list.md  adr05-gap-detection.md  adr1.md  adr2.md  adr3.md
grammar-kit/: Cargo.toml  README.md
grammar-kit/src/: lib.rs  testing.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs  model.rs  parser.rs  validator.rs
macros/src/codegen/: analysis.rs  mod.rs  old.rs.txt  pattern.rs  rule.rs
scripts/: pre-commit.sh
src/: builtins.rs  codegen.rs  generator.rs  lib.rs  model.rs  parser.rs  resolver.rs  rt.rs  testing.rs
src/codegen/: mod.rs
syn-grammar-macros/: Cargo.toml  README.md
syn-grammar-macros/src/: backend.rs  lib.rs  monomorphize.rs
syn-grammar-macros/src/codegen/: mod.rs  pattern.rs  rule.rs
syn-grammar-model/: Cargo.toml
syn-grammar-model/src/: analysis.rs  lib.rs  model.rs  parser.rs  validator.rs
syn-grammar-model/src/model/: mod.rs  types.rs
syn-kit/: Cargo.toml  README.md
syn-kit/src/: lib.rs  testing.rs
tests/: comprehensive_test.rs  error_reporting_test.rs  generic_test.rs  implicit_tokens_test.rs  include_test.rs  labeled_alternatives_test.rs  list_test.rs  literal_binding_test.rs  new_primitives_test.rs  peek_not_test.rs  recovery_test.rs  until_test.rs
tests/common/: mod.rs
tests/fixtures/: simple.g
