[package]
name = "syn-grammar"
version = "0.2.0"
edition = "2021"
description = "A parser generator for Rust that compiles EBNF-like grammars into syn::parse::Parse implementations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keywan-ghadami/syn-grammar"
documentation = "https://docs.rs/syn-grammar"
homepage = "https://github.com/keywan-ghadami/syn-grammar"
readme = "README.md"
keywords = ["parser", "syn", "grammar", "ebnf", "macro"]
categories = ["parsing", "development-tools"]
authors = ["Keywan Ghadami"]

# We define a workspace so Cargo builds the macro subdirectory correctly
[workspace]
members = ["macros"]
exclude = [
    ".devcontainer",
    ".aider*",
    ".gitignore",
    ".github"
]


[dependencies]
# 1. The macro itself (local path)
syn-grammar-macros = { path = "./macros", version = "0.2.0" }

# 2. Runtime dependencies
# These are used by the generated code (e.g. ParseStream, Token!, etc.)
# We enable "full" so the generator (which is part of this lib)
# can parse Rust code blocks in the grammar files.
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
# For tests we need "full" to parse complex syntax (like in actions)
syn = { version = "2.0", features = ["full", "extra-traits"] }
