[package]
name = "grammar-kit"
version = "0.9.0"
edition = "2021"
description = "Testing and runtime utilities for syn-grammar generated parsers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keywan-ghadami/syn-grammar"

[features]
default = ["syn", "rt", "testing"]
syn = ["dep:syn", "dep:proc-macro2"]
rt = []
testing = ["dep:termcolor"]
trace = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"], optional = true }
proc-macro2 = { version = "1.0", optional = true, features = ["span-locations"] }
termcolor = { version = "1.2", optional = true }

[dev-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
