[package]
name = "syn-grammar-macros"
version = "0.7.0"
edition = "2021"
description = "Procedural macros for syn-grammar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/keywan-ghadami/syn-grammar"
documentation = "https://docs.rs/syn-grammar-macros"
homepage = "https://github.com/keywan-ghadami/syn-grammar"
readme = "README.md"
keywords = ["parser", "syn", "grammar", "ebnf", "macro"]
categories = ["parsing", "development-tools"]
authors = ["Keywan Ghadami"]

# IMPORTANT: Marks this as a procedural macro crate
[lib]
proc-macro = true

[dependencies]
syn-grammar-model = { path = "../syn-grammar-model", version = "0.7.0" }
# 1. Parsing the DSL (We need "full" for syntax checks and parsing)
syn = { version = "2.0", features = ["full", "parsing", "printing", "extra-traits"] }

# 2. Code generation
quote = "1.0"
proc-macro2 = "1.0"
