[package]
name = "syn-grammar-macros"
version = "0.9.0"
edition = "2021"
description = "Internal macros for syn-grammar."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keywan-ghadami/syn-grammar"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
syn-grammar-model = { path = "../syn-grammar-model", version = "0.9.0" }
