[package]
name = "syn-grammar-model"
version = "0.9.0"
edition = "2021"
description = "Internal model and parser for syn-grammar."
license = "MIT OR Apache-2.0"
repository = "https://github.com/keywan-ghadami/syn-grammar"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
